sfSandBoxCode/force-app/main/default/objects/QuAC__c/QuAC__c.object-meta.xml
<CustomObject>
    <description>QuAC for Customer standard check</description>
    <label>QuAC</label>
    <nameField>
        <label>QuAC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QuAC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>