sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_13_Soap__c.field-meta.xml
<CustomField>
    <fullName>MLU_13_Soap__c</fullName>
    <label>Is soap present?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>