sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_14_Sawdust__c.field-meta.xml
<CustomField>
    <fullName>MLU_14_Sawdust__c</fullName>
    <label>Is sawdust present?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>