sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_15_tissue__c.field-meta.xml
<CustomField>
    <fullName>MLU_15_tissue__c</fullName>
    <label>Is tissue present?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>