sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_18_flies__c.field-meta.xml
<CustomField>
    <fullName>MLU_18_flies__c</fullName>
    <description>Use to calculate MLU_18_flies</description>
    <label>Is the FLT free of flies?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>