sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_19_Trash__c.field-meta.xml
<CustomField>
    <fullName>MLU_19_Trash__c</fullName>
    <description>Use to calculate MLU_19_trash</description>
    <label>Toilet surrounding (2m) free of trash</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>