sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_26_YN__c.field-meta.xml
<CustomField>
    <fullName>MLU_26_YN__c</fullName>
    <label>Is there someone responsible for cleanin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>