sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_27_Cleaner__c.field-meta.xml
<CustomField>
    <fullName>MLU_27_Cleaner__c</fullName>
    <label>If yes, who is responsible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>