sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_2_location__c.field-meta.xml
<CustomField>
    <fullName>MLU_2_location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location Name</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>QuAC</relationshipLabel>
    <relationshipName>QuAC</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>