sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_2a_location__c.field-meta.xml
<CustomField>
    <fullName>MLU_2a_location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Toilet Name</label>
    <referenceTo>Toilet__c</referenceTo>
    <relationshipLabel>QuAC</relationshipLabel>
    <relationshipName>QuAC</relationshipName>
    <type>Lookup</type>
</CustomField>