sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_31_Comments__c.field-meta.xml
<CustomField>
    <fullName>MLU_31_Comments__c</fullName>
    <label>General comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>