sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_3_Num_t__c.field-meta.xml
<CustomField>
    <fullName>MLU_3_Num_t__c</fullName>
    <label>Number of toilets at location</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>