sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_40_open__c.field-meta.xml
<CustomField>
    <fullName>MLU_40_open__c</fullName>
    <description>Use to calculate MLU_40_open</description>
    <inlineHelpText>Is the toilet open or closed at the time of MLU</inlineHelpText>
    <label>Is the toilet open or closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>