sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_41_Price_Match__c.field-meta.xml
<CustomField>
    <fullName>MLU_41_Price_Match__c</fullName>
    <description>Use to calculate MLU_price_match</description>
    <label>Did the price charged match the price li</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>