sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_42_smell__c.field-meta.xml
<CustomField>
    <fullName>MLU_42_smell__c</fullName>
    <description>Use to calculate MLU_42_Smell</description>
    <label>How does the FLT smell?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>