sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_43_structure__c.field-meta.xml
<CustomField>
    <fullName>MLU_43_structure__c</fullName>
    <description>Use to Calculate MLU_43_Structure</description>
    <label>Is the FLT structure…</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>