sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_44_mop__c.field-meta.xml
<CustomField>
    <fullName>MLU_44_mop__c</fullName>
    <description>Use to calculate MLU_44_mop</description>
    <label>Are the mop and bucket….?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>