sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_45_floor_feces__c.field-meta.xml
<CustomField>
    <fullName>MLU_45_floor_feces__c</fullName>
    <description>Use to calculate MLU_45_floor_feces</description>
    <label>Squat plate and floor free of feces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>