sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_46_sawdust_cover__c.field-meta.xml
<CustomField>
    <fullName>MLU_46_sawdust_cover__c</fullName>
    <description>Use to calculate MLU_46_sawdust_cover</description>
    <label>Sawdust covering the feces in hole</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>