sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_4_date__c.field-meta.xml
<CustomField>
    <fullName>MLU_4_date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>