sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_50_SP_Color__c.field-meta.xml
<CustomField>
    <fullName>MLU_50_SP_Color__c</fullName>
    <description>Use to calculate MLU_50_SP_color</description>
    <label>Does the squat plate have…</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>