sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_51_SP_scratches__c.field-meta.xml
<CustomField>
    <fullName>MLU_51_SP_scratches__c</fullName>
    <label>Does the floor and squat plate  have…</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>