sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_52_walls_dust__c.field-meta.xml
<CustomField>
    <fullName>MLU_52_walls_dust__c</fullName>
    <description>Use to calculate MLU_52_walls_dust</description>
    <label>Do the walls and ceiling have…</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>