sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_53_roof__c.field-meta.xml
<CustomField>
    <fullName>MLU_53_roof__c</fullName>
    <description>Use to calculate MLU_53_roof</description>
    <label>Does the roof have…</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>