sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_54_HW_Station__c.field-meta.xml
<CustomField>
    <fullName>MLU_54_HW_Station__c</fullName>
    <description>Use to calculate MLU_54_HW_Station</description>
    <label>Is the hand washing station/tap…</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>