sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_55_bins__c.field-meta.xml
<CustomField>
    <fullName>MLU_55_bins__c</fullName>
    <description>Use to calculate MLU_55_bins</description>
    <label>Are the bins…</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>