sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_56_sawdust_cup__c.field-meta.xml
<CustomField>
    <fullName>MLU_56_sawdust_cup__c</fullName>
    <description>Use to calculate MLU_56_Sawdust_cup</description>
    <label>Is the sawdust cup…</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>