sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_57_door__c.field-meta.xml
<CustomField>
    <fullName>MLU_57_door__c</fullName>
    <label>Does the door have…</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>