sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_58_Operator__c.field-meta.xml
<CustomField>
    <fullName>MLU_58_Operator__c</fullName>
    <label>Was the operator…</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>