sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_59_ID__c.field-meta.xml
<CustomField>
    <fullName>MLU_59_ID__c</fullName>
    <label>Is the operator wearing an ID or uniform</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>