sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_5_Time__c.field-meta.xml
<CustomField>
    <fullName>MLU_5_Time__c</fullName>
    <label>Time</label>
    <type>DateTime</type>
</CustomField>