sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_60_dressed__c.field-meta.xml
<CustomField>
    <fullName>MLU_60_dressed__c</fullName>
    <label>Does the operator look…</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>