sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_61_Other_present__c.field-meta.xml
<CustomField>
    <fullName>MLU_61_Other_present__c</fullName>
    <label>Are other items (e.g Perfume, mints) pre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>