sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_61a_other_display__c.field-meta.xml
<CustomField>
    <fullName>MLU_61a_other_display__c</fullName>
    <label>Are other Items on Display?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>