sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_61a_Squat__c.field-meta.xml
<CustomField>
    <fullName>MLU_61a_Squat__c</fullName>
    <label>A. Squat plate and floor covered in</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>