sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_61d_squat__c.field-meta.xml
<CustomField>
    <fullName>MLU_61d_squat__c</fullName>
    <description>Use to calculate MLU_61d_squat</description>
    <label>B.Squat plate and Floor covered in</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>