sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_62_HW_Stations__c.field-meta.xml
<CustomField>
    <fullName>MLU_62_HW_Stations__c</fullName>
    <label>How many HW stations?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>