sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_62_Plot_Open__c.field-meta.xml
<CustomField>
    <fullName>MLU_62_Plot_Open__c</fullName>
    <label>Is the plot open or closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>