sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_62_walls_feces__c.field-meta.xml
<CustomField>
    <fullName>MLU_62_walls_feces__c</fullName>
    <description>Use to calculate MLU_62_walls_feces</description>
    <label>Are the walls and doors covered in...</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>