sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_63_HW_Functional__c.field-meta.xml
<CustomField>
    <fullName>MLU_63_HW_Functional__c</fullName>
    <label>How many HW Functional?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>