sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_63_T_Location__c.field-meta.xml
<CustomField>
    <fullName>MLU_63_T_Location__c</fullName>
    <label>Is the toilet inside or outside the plot</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>