sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_64_Tissue__c.field-meta.xml
<CustomField>
    <fullName>MLU_64_Tissue__c</fullName>
    <label>Is tissue provided by…</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>