sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_65_sawdust__c.field-meta.xml
<CustomField>
    <fullName>MLU_65_sawdust__c</fullName>
    <label>Is sawdust provided by…</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>