sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_66_Soap__c.field-meta.xml
<CustomField>
    <fullName>MLU_66_Soap__c</fullName>
    <label>Is soap provided by…</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>