sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_67_Water__c.field-meta.xml
<CustomField>
    <fullName>MLU_67_Water__c</fullName>
    <label>Is water provided by…</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>