sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_68_Other__c.field-meta.xml
<CustomField>
    <fullName>MLU_68_Other__c</fullName>
    <label>Are other items (e.g perfume, mints) pro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>