sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_69_Soap_Type__c.field-meta.xml
<CustomField>
    <fullName>MLU_69_Soap_Type__c</fullName>
    <label>If soap is available is it….</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>