sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_6_enumerator__c.field-meta.xml
<CustomField>
    <fullName>MLU_6_enumerator__c</fullName>
    <description>Use to calculate MLU_6_Enumerator</description>
    <label>Name of Enumerator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>