sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_76_FeedbackRecieved__c.field-meta.xml
<CustomField>
    <fullName>MLU_76_FeedbackRecieved__c</fullName>
    <description>Use to calculate MLU_76_FeedbackReceived</description>
    <label>Feedback Recieved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>