sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_7_supervisor__c.field-meta.xml
<CustomField>
    <fullName>MLU_7_supervisor__c</fullName>
    <description>Use to calculate MLU_7_supervisor</description>
    <label>Questionnaire Checked by</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>