sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/MLU_8_cost__c.field-meta.xml
<CustomField>
    <fullName>MLU_8_cost__c</fullName>
    <label>How much did the toilet cost to use?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>