sfSandBoxCode/force-app/main/default/objects/QuAC__c/fields/QuAC_Longitude__c.field-meta.xml
<CustomField>
    <fullName>QuAC_Longitude__c</fullName>
    <label>QuAC Longitude</label>
    <precision>18</precision>
    <scale>14</scale>
    <type>Number</type>
</CustomField>