sfSandBoxCode/force-app/main/default/objects/QuAC__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MLU_4_date__c</columns>
    <columns>MLU_2_location__c</columns>
    <columns>MLU_2a_location__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>